--- a/src/partials/documentos.html
+++ b/src/partials/documentos.html
@@ -163,11 +163,15 @@
           <div class="as__documentos_int_content">
             <h2>Calendario de pagos</h2>
             <p>Conoce la fecha de pago de tu mesada pensional.</p>
-            <a
+            <!-- <a
               href="/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf"
               class="as__button small"
               target="_blank"
             >
+              <span>INGRESA AQUÍ</span>
+              <i role="presentation" class="fa-light fa-arrow-right"></i>
+            </a> -->
+            <a href="/calendario_pagos" class="as__button small">
               <span>INGRESA AQUÍ</span>
               <i role="presentation" class="fa-light fa-arrow-right"></i>
             </a>
