--- a/src/partials/gobierno/3_organos.html
+++ b/src/partials/gobierno/3_organos.html
@@ -52,7 +52,7 @@
       </p>
     </li>
   </ul>
-  <div class="w-full">
+  <div class="w-full flex items-center flex-col">
     <h4 class="gpert">Otros</h4>
     <span class="gper">0.9 %</span>
   </div>
@@ -83,7 +83,10 @@
         src="/assets/images/junta/junta-sebastian.png"
         alt="Sebastián Alberto Rey"
       />
-      <h4>Sebastián Alberto Rey</h4>
+      <h4>
+        Sebastián Alberto<br />
+        Rey
+      </h4>
       <p>Presidente de la Junta Directiva</p>
     </li>
     <li onclick="jd_modal2.showModal()">
@@ -91,28 +94,44 @@
         src="/assets/images/junta/junta-stella.png"
         alt="Stella Villegas de Osorio"
       />
-      <h4>Stella Villegas de Osorio</h4>
+      <h4>
+        Stella<br />
+        Villegas de Osorio
+      </h4>
+      <p>Miembro Independiente</p>
     </li>
     <li onclick="jd_modal3.showModal()">
       <img
         src="/assets/images/junta/junta-tatiana.png"
         alt="Tatiana Uribe Aristizábal"
       />
-      <h4>Tatiana Uribe Aristizábal</h4>
+      <h4>
+        Tatiana<br />
+        Uribe Aristizábal
+      </h4>
+      <p>Miembro Patrimonial</p>
     </li>
     <li onclick="jd_modal4.showModal()">
       <img
         src="/assets/images/junta/junta-catalina.png"
         alt="Catalina Restrepo Cardona"
       />
-      <h4>Catalina Restrepo Cardona</h4>
+      <h4>
+        Catalina<br />
+        Restrepo Cardona
+      </h4>
+      <p>Miembro Patrimonial</p>
     </li>
     <li onclick="jd_modal5.showModal()">
       <img
         src="/assets/images/junta/junta-andres.png"
         alt="Andrés Aguirre Martínez"
       />
-      <h4>Andrés Aguirre Martínez</h4>
+      <h4>
+        Andrés<br />
+        Aguirre Martínez
+      </h4>
+      <p>Miembro Independiente</p>
     </li>
   </ul>
 
@@ -330,7 +349,7 @@
         <div class="modal_info_int">
           <h5>Andrés Aguirre Martínez</h5>
           <p>Miembro Independiente</p>
-          <h6>Ingeniera</h6>
+          <h6>Médico</h6>
           <ul>
             <li>
               Médico de la Universidad de Antioquia y especialista en Gerencia
