--- a/src/partials/gobierno/3_organos.html
+++ b/src/partials/gobierno/3_organos.html
@@ -51,12 +51,12 @@
         institucionales en Canadá con más de 30 años de experiencia.
       </p>
     </li>
+    <li class="frw">
+      <span class="gper">0.9 %</span>
+      <h4 class="gpert">Otros</h4>
+    </li>
   </ul>
-  <div class="w-full flex items-center flex-col">
-    <h4 class="gpert">Otros</h4>
-    <span class="gper">0.9 %</span>
-  </div>
-
+  
   <h2 class="mt-10">Junta Directiva</h2>
   <p>
     La Junta Directiva es el órgano de administración superior y actúa en
