--- a/src/partials/gobierno/tabs.html
+++ b/src/partials/gobierno/tabs.html
@@ -17,6 +17,7 @@
             <a
               href="#documentos"
               data-tab="0"
+              data-hash="principios"
               aria-current="page"
               class="tabs_link active"
             >
@@ -31,6 +32,7 @@
             <a
               href="#documentos"
               data-tab="1"
+              data-hash="politicas"
               aria-current="page"
               class="tabs_link"
             >
@@ -42,7 +44,13 @@
             </a>
           </li>
           <li class="w-full">
-            <a href="#faqs" data-tab="2" aria-current="page" class="tabs_link">
+            <a
+              href="#documentos"
+              data-tab="2"
+              data-hash="organos"
+              aria-current="page"
+              class="tabs_link"
+            >
               <i class="fa-solid fa-users-between-lines"></i>
               <b
                 >Órganos <br />
@@ -51,13 +59,25 @@
             </a>
           </li>
           <li class="w-full">
-            <a href="#faqs" data-tab="3" aria-current="page" class="tabs_link">
+            <a
+              href="#documentos"
+              data-tab="3"
+              data-hash="informes"
+              aria-current="page"
+              class="tabs_link"
+            >
               <i class="fa-solid fa-file-lines"></i>
               <b>Informes</b>
             </a>
           </li>
           <li class="w-full">
-            <a href="#faqs" data-tab="4" aria-current="page" class="tabs_link">
+            <a
+              href="#documentos"
+              data-tab="4"
+              data-hash="alta_gerencia"
+              aria-current="page"
+              class="tabs_link"
+            >
               <i class="fa-solid fa-people-group"></i>
               <b
                 >Alta <br />
