--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2160,13 +2160,16 @@ body {
           td {
             @apply px-0.5 py-1 border-b border-red-400 pointer-events-none;
             .last_day {
-              @apply bg-azul-dark text-white text-lg font-bold;
+              @apply bg-azul-bold text-white text-lg font-bold;
             }
             .today {
-              @apply bg-azul-mid text-white font-bold;
+              @apply bg-azul-bright2 text-white font-bold;
             }
             .weekend {
               @apply opacity-75 bg-slate-200;
+            }
+            .novedad {
+              @apply opacity-75 bg-amarillo-light;
             }
           }
         }
@@ -2181,10 +2184,31 @@ body {
   }
   .calendario-top-info {
     @apply flex flex-col gap-y-4 text-2xl text-azul-dark font-je;
-    div {
+    div.infop {
       @apply text-xl;
       span {
         @apply inline-block rounded-2xl bg-azul-bright2 text-white px-2 py-1;
+      }
+    }
+    .infot {
+      @apply flex flex-col gap-y-2 text-base;
+      li {
+        @apply flex flex-row gap-x-2 items-center;
+      }
+      span {
+        @apply inline-block rounded-sm bg-azul-bright2 text-white w-4 h-4;
+      }
+      .last_day {
+        @apply bg-azul-bold text-white text-lg font-bold;
+      }
+      .today {
+        @apply bg-azul-bright2 text-white font-bold;
+      }
+      .weekend {
+        @apply opacity-75 bg-slate-200;
+      }
+      .novedad {
+        @apply opacity-75 bg-amarillo-light;
       }
     }
   }
