--- a/src/partials/faqs/faq_4.html
+++ b/src/partials/faqs/faq_4.html
@@ -3,6 +3,18 @@
   <ol class="fqs">
     <li class="fqs_list">
       <div class="fqs_list_int">
+        <h4>¿Cuándo sería el pago de mi pensión? ¿mensual o quincenal?</h4>
+        <div class="fqs_info">
+          <p>
+            El pago de tu mesada se realizará de forma mensual y se hará máximo
+            el último día hábil de cada mes. Conoce el calendario de pagos dando
+            clic <a class="font-bold text-azul-bright2 underline-offset-4 underline" href="/calendario_pagos" target="_blank">aquí</a>
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
         <h4>¿Por qué pueden suspender mi mesada?</h4>
         <div class="fqs_info">
           <p>
@@ -69,17 +81,7 @@
         </div>
       </div>
     </li>
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>¿Cuándo sería el pago de mi pensión? ¿mensual o quincenal?</h4>
-        <div class="fqs_info">
-          <p>
-            El pago de tu mesada se realizará de forma mensual y se hará máximo
-            el último día hábil de cada mes.
-          </p>
-        </div>
-      </div>
-    </li>
+
     <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>¿Mi mesada pensional incrementa cada año?</h4>
