--- a/src/partials/suscribete/sol_form.html
+++ b/src/partials/suscribete/sol_form.html
@@ -8,6 +8,29 @@
         action="https://proteccion--stage--c.sandbox.vf.force.com/apex/Suscribete"
         enctype="application/x-www-form-urlencoded"
       >
+        <div role="alert" class="alert bg-BG-8 text-azul-dark">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="stroke-current shrink-0 h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
+            />
+          </svg>
+          <div>
+            <div class="alert-heading">
+              <h3 class="font-bold text-azul-bright2 text-lg">
+                ¡Tu solicitud ha sido enviada!
+              </h3>
+              <p>Gracias por permitirnos estar a tu lado</p>
+            </div>
+          </div>
+        </div>
         <input type="hidden" name="pg:fm" value="pg:fm" />
         <script>
           if (!window.sfdcPage) {
