ajustes footer y documentos

--- a/src/partials/gobierno/2_pol_corp.html
+++ b/src/partials/gobierno/2_pol_corp.html
@@ -18,63 +18,145 @@
     <ul class="as__desc_items">
       <li class="as__desc_item">
         <a
-          href="https://www.asulado.com/wp-content/uploads/2022/01/Politica-de-Administracion-de-Riesgos-ASULADO-Seguros-de-Vida.pdf"
+          href="/assets/documentos/Grupo Sura Buen Gobierno.pdf"
           target="_blank"
+          class="dest"
+          aria-current="page"
         >
           <div>
             <b>Código de buen gobierno Grupo Sura y Anexo ASULADO</b>
-            <span> PDF 125 kb </span>
+            <span> PDF 354 kb </span>
           </div>
           <i class="itc fa-light fa-cloud-arrow-down"></i>
         </a>
       </li>
       <li class="as__desc_item">
         <a
-          href="https://www.asulado.com/wp-content/uploads/2022/01/Politica-de-Administracion-de-Riesgos-ASULADO-Seguros-de-Vida.pdf"
+          href="/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf"
           target="_blank"
+          class="dest"
+          aria-current="page"
         >
           <div>
             <b>Código de conducta Grupo Sura y Anexo ASULADO</b>
-            <span> PDF 125 kb </span>
+            <span> PDF 529 kb </span>
           </div>
           <i class="itc fa-light fa-cloud-arrow-down"></i>
         </a>
       </li>
       <li class="as__desc_item">
         <a
-          href="https://www.asulado.com/wp-content/uploads/2022/01/Politica-de-Administracion-de-Riesgos-ASULADO-Seguros-de-Vida.pdf"
+          href="/assets/documentos/SGC-PO10 Estatutos Asulado v2"
           target="_blank"
+          class="dest"
+          aria-current="page"
         >
           <div>
             <b>Estatutos sociales ASULADO</b>
-            <span> PDF 125 kb </span>
+            <span> PDF 451 kb </span>
           </div>
           <i class="itc fa-light fa-cloud-arrow-down"></i>
         </a>
       </li>
       <li class="as__desc_item">
         <a
-          href="https://www.asulado.com/wp-content/uploads/2022/01/Politica-de-Administracion-de-Riesgos-ASULADO-Seguros-de-Vida.pdf"
+          href="/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf"
           target="_blank"
+          class="dest"
+          aria-current="page"
         >
           <div>
             <b>Política de administración y control del riesgo LAFT</b>
-            <span> PDF 125 kb </span>
+            <span> PDF 184 kb </span>
           </div>
           <i class="itc fa-light fa-cloud-arrow-down"></i>
         </a>
       </li>
       <li class="as__desc_item">
         <a
-          href="https://www.asulado.com/wp-content/uploads/2022/01/Politica-de-Administracion-de-Riesgos-ASULADO-Seguros-de-Vida.pdf"
+          href="/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf"
           target="_blank"
+          class="dest"
+          aria-current="page"
         >
           <div>
             <b
               >Política para la gestión del riesgo de fraude, soborno y
               corrupción</b
             >
-            <span> PDF 125 kb </span>
+            <span> PDF 298 kb </span>
+          </div>
+          <i class="itc fa-light fa-cloud-arrow-down"></i>
+        </a>
+      </li>
+      <li class="as__desc_item">
+        <a
+          href="/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+        >
+          <div>
+            <b>Reglamento comité de nombramientos y compensación</b>
+            <span> PDF 210 kb </span>
+          </div>
+          <i class="itc fa-light fa-cloud-arrow-down"></i>
+        </a>
+      </li>
+      <li class="as__desc_item">
+        <a
+          href="/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+        >
+          <div>
+            <b>Reglamento comité de riesgos e inversiones</b>
+            <span> PDF 234 kb </span>
+          </div>
+          <i class="itc fa-light fa-cloud-arrow-down"></i>
+        </a>
+      </li>
+      <li class="as__desc_item">
+        <a
+          href="/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+        >
+          <div>
+            <b>Reglamento comité de auditoría</b>
+            <span> PDF 386 kb </span>
+          </div>
+          <i class="itc fa-light fa-cloud-arrow-down"></i>
+        </a>
+      </li>
+      <li class="as__desc_item">
+        <a
+          href="/assets/documentos/SGC-PO07 Board Regulations v1.pdf"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+        >
+          <div>
+            <b>Reglamento junta directiva</b>
+            <span> PDF 533 kb </span>
+          </div>
+          <i class="itc fa-light fa-cloud-arrow-down"></i>
+        </a>
+      </li>
+      <li class="as__desc_item">
+        <a
+          href="/assets/documentos/SGC-PO08 JD Policy.pdf"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+        >
+          <div>
+            <b
+              >Política para el nombramiento remuneración y sucesión de la JD</b
+            >
+            <span> PDF 236 kb </span>
           </div>
           <i class="itc fa-light fa-cloud-arrow-down"></i>
         </a>
