--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -177,7 +177,7 @@
             class="dest"
             aria-current="page"
           >
-            Política Riesgo LAFT
+            Política de administración y control riesgo LAFT
           </a>
         </li>
         <li>
@@ -192,7 +192,7 @@
         </li>
         <li>
           <a
-            href="/assets/documentos/Estatutos-sociales-Asulado.pdf"
+            href="/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf"
             target="_blank"
             class="dest"
             aria-current="page"
@@ -202,7 +202,7 @@
         </li>
         <li>
           <a
-            href="/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf"
+            href="/assets/documentos/Grupo Sura Buen Gobierno.pdf"
             target="_blank"
             class="dest"
             aria-current="page"
