--- a/src/partials/gobierno/2_pol_corp.html
+++ b/src/partials/gobierno/2_pol_corp.html
@@ -154,7 +154,8 @@
         >
           <div>
             <b
-              >Política para el nombramiento remuneración y sucesión de la JD</b
+              >Política para el nombramiento remuneración y sucesión de la Junta
+              Directiva</b
             >
             <span> PDF 236 kb </span>
           </div>
