--- a/src/partials/gobierno/4_informes.html
+++ b/src/partials/gobierno/4_informes.html
@@ -13,12 +13,12 @@
     <ul class="as__desc_items full">
       <li class="as__desc_item">
         <a
-          href="https://www.asulado.com/wp-content/uploads/2022/01/Politica-de-Administracion-de-Riesgos-ASULADO-Seguros-de-Vida.pdf"
+          href="/assets/documentos/Financial Statements.pdf"
           target="_blank"
         >
           <div>
             <b>Estados Financieros y Revelaciones Diciembre 2022 Asulado</b>
-            <span> PDF 125 kb </span>
+            <span> PDF 1.7 mb </span>
           </div>
           <i class="itc fa-light fa-cloud-arrow-down"></i>
         </a>
@@ -33,62 +33,18 @@
     </h3>
     <ul class="as__desc_items full">
       <li class="as__desc_item">
-        <a
-          href="https://www.asulado.com/wp-content/uploads/2022/01/Politica-de-Administracion-de-Riesgos-ASULADO-Seguros-de-Vida.pdf"
+        <a href="/assets/documentos/Presidente y Junta Directiva Informe.pdf"
           target="_blank"
         >
           <div>
             <b>Informe de gestión de Presidenta y Junta Directiva 2022</b>
-            <span> PDF 125 kb </span>
+            <span> PDF 192 kb </span>
           </div>
           <i class="itc fa-light fa-cloud-arrow-down"></i>
         </a>
       </li>
     </ul>
   </div>
-  <!-- <h3>Politicas corporativas</h3>
-  <div class="as__desc">
-    <h3>
-      <i class="fa-solid fa-file"></i>
-      Descargables
-    </h3>
-    <ul class="as__desc_items">
-      <li class="as__desc_item">
-        <a
-          href="https://www.asulado.com/wp-content/uploads/2022/01/Politica-de-Administracion-de-Riesgos-ASULADO-Seguros-de-Vida.pdf"
-          target="_blank"
-        >
-          <div>
-            <b>Código de buen gobierno</b>
-            <span> PDF 125 kb </span>
-          </div>
-          <i class="itc fa-light fa-cloud-arrow-down"></i>
-        </a>
-      </li>
-      <li class="as__desc_item">
-        <a
-          href="https://www.asulado.com/wp-content/uploads/2022/01/Politica-de-Administracion-de-Riesgos-ASULADO-Seguros-de-Vida.pdf"
-          target="_blank"
-        >
-          <div>
-            <b>Código de Conducta Grupo Sura Anexo Asulado</b>
-            <span> PDF 125 kb </span>
-          </div>
-          <i class="itc fa-light fa-cloud-arrow-down"></i>
-        </a>
-      </li>
-      <li class="as__desc_item">
-        <a
-          href="https://www.asulado.com/wp-content/uploads/2022/01/Politica-de-Administracion-de-Riesgos-ASULADO-Seguros-de-Vida.pdf"
-          target="_blank"
-        >
-          <div>
-            <b>Estatutos sociales Asulado</b>
-            <span> PDF 125 kb </span>
-          </div>
-          <i class="itc fa-light fa-cloud-arrow-down"></i>
-        </a>
-      </li>
-    </ul> -->
+ 
   </div>
 </div>
