--- a/src/partials/solicitudes/tabs.html
+++ b/src/partials/solicitudes/tabs.html
@@ -1,6 +1,6 @@
 <section class="as__section as__g_documentos_tabs {{cls}}">
   <div class="as__section_wrapper full">
-    <div class="as__section_content_full as__g_documentos_tabs_int">
+    <div class="as__section_content_full as__g_documentos_tabs_int pb">
       <h2>¿Qué tipo de PQRS puedes realizar?</h2>
 
       <ul class="as__doc_tabs_info">
