--- a/src/partials/home/blog.html
+++ b/src/partials/home/blog.html
@@ -1,29 +1,32 @@
 <section id="home_blog" class="as__section as__blog">
   <div class="as__section_wrapper">
     <div class="as__section_content">
-      <h3 class="as__title_section">Artículos de interés</h3>
-      <a href="/" class="as__button small">
+      <h3 class="as__title_section">{{title}}</h3>
+      <!-- <a href="/" class="as__button small">
         <span>{{ button }}</span
         ><i role="presentation" class="fa-light fa-arrow-right"></i>
-      </a>
+      </a> -->
     </div>
   </div>
   <ul class="as__blog_posts">
     <li class="as__post_small">
-      <a href="/blog/5-consejos-para-aprovechar-el-seguro-previsional"
+      <a href="/blog/como-ahorrar-al-mercar"
         ><h4>5 consejos para aprovechar el seguro previsional</h4>
         <div class="as__post_small_content">
           <i role="presentation" class="fa-solid fa-circle-arrow-right"></i>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-            at nisi iaculis, viverra enim venenatis, varius ante. Integer
+            <strong
+              >cómo puedes ahorrar al mercar para poder sacar el máximo provecho
+              a tu mesada pensional</strong
+            >? En este artículo te compartimos algunos de los mejores tips para
+            mercar inteligente.
           </p>
         </div>
-        <img alt="Asulado" src="/assets/images/blog/blog_1.jpg"
+        <img alt="Asulado" src="/assets/images/blog/b1_top.jpg"
       /></a>
     </li>
     <li class="as__post_small">
-      <a href="/blog/5-consejos-para-aprovechar-el-seguro-previsional"
+      <a href="/blog/como-ahorrar-al-mercar"
         ><h4>¿Qué beneficios tengo con la renta vitalicia?</h4>
         <div class="as__post_small_content">
           <i role="presentation" class="fa-solid fa-circle-arrow-right"></i>
@@ -36,7 +39,7 @@
       /></a>
     </li>
     <li class="as__post_small">
-      <a href="/blog/5-consejos-para-aprovechar-el-seguro-previsional"
+      <a href="/blog/como-ahorrar-al-mercar"
         ><h4>Pensión de invalidez: todo lo que debes saber</h4>
         <div class="as__post_small_content">
           <i role="presentation" class="fa-solid fa-circle-arrow-right"></i>
@@ -48,7 +51,7 @@
         <img alt="Asulado" src="/assets/images/blog/blog_3.jpg"
       /></a>
     </li>
-    <li class="as__post_small">
+    <!-- <li class="as__post_small">
       <a href="/blog/5-consejos-para-aprovechar-el-seguro-previsional"
         ><h4>Preguntas frecuentes sobre la pensión vitalicia</h4>
         <div class="as__post_small_content">
@@ -60,6 +63,6 @@
         </div>
         <img alt="Asulado" src="/assets/images/blog/blog_4.jpg"
       /></a>
-    </li>
+    </li> -->
   </ul>
 </section>
