--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -1,7 +1,34 @@
 <section id="home_banners" class="as__section as__banner">
   <div class="as__banner_wrapper">
     <div class="as__banner_wrapper_int">
-      <div class="banner banner_0 active">
+      <div class="banner banner_1 active">
+        <div class="as__banner_content">
+          <h1>
+            <span class="ban_anim1">Incremento mesada</span>
+            <b class="ban_anim1">pensional 2024 </b>
+          </h1>
+          <div>
+            <p class="ban_anim1">
+              Si tu mesada pensional para el 2023 era de $1.160.000 pesos, para
+              el 2024 será de $XXX pesos
+            </p>
+            <p class="dest ban_anim1">
+              ¡Permanece actualizado de estas novedades en nuestros canales
+              digitales!
+            </p>
+            <!-- <a href="/mesada_pensional" class="as__button ban_anim1">
+              <span>Ingresa aquí y entérate </span>
+              <i role="presentation" class="fa-light fa-arrow-right"></i>
+            </a> -->
+          </div>
+        </div>
+        <div class="as__banner_images">
+          <img src="/assets/images/banner_1_bg.webp" alt="Asulado" />
+          <img src="/assets/images/banner_1_foto.webp" alt="Asulado" />
+        </div>
+        <div class="as__banner_piso"></div>
+      </div>
+      <div class="banner banner_0">
         <div class="as__banner_content">
           <h1>
             <span class="ban_anim1">Bienvenido a</span>
@@ -316,29 +343,6 @@
             <image src="/assets/images/img_anciana.webp" alt="Asulado"></image>
           </div>
         </div>
-      </div>
-      <div class="banner banner_1">
-        <div class="as__banner_content">
-          <h1>
-            <span class="ban_anim1">Mesada</span>
-            <b class="ban_anim1">Pensional</b>
-          </h1>
-          <div>
-            <p class="ban_anim1">
-              Conoce los nuevos valores de tu mesada pensional para el 2024
-              según los incrementos definidos por el Gobierno Nacional
-            </p>
-            <a href="/mesada_pensional" class="as__button ban_anim1">
-              <span>Ingresa aquí y entérate </span>
-              <i role="presentation" class="fa-light fa-arrow-right"></i>
-            </a>
-          </div>
-        </div>
-        <div class="as__banner_images">
-          <img src="/assets/images/banner_1_bg.webp" alt="Asulado" />
-          <img src="/assets/images/banner_1_foto.webp" alt="Asulado" />
-        </div>
-        <div class="as__banner_piso"></div>
       </div>
     </div>
     <div class="as__banner_elements">
