footer con enlaces

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -227,7 +227,7 @@
             class="dest"
             aria-current="page"
           >
-            Gestión del riesgo de fraude, soborno y corrupción
+            Política para la gestión del riesgo de fraude, soborno y corrupción
           </a>
         </li>
         <li>
