Banner nuevo en el home

--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -4,6 +4,33 @@
       <div class="banner banner_1 active">
         <div class="as__banner_content">
           <h1>
+            <span class="ban_anim1">Nuevo banner </span>
+            <b class="ban_anim1">pensional 2024 </b>
+          </h1>
+          <div>
+            <p class="ban_anim1">
+              Si tu mesada pensional para el 2023 era de $1.160.000 pesos, para
+              el 2024 será de $XXX pesos
+            </p>
+            <p class="dest ban_anim1">
+              ¡Permanece actualizado de estas novedades en nuestros canales
+              digitales!
+            </p>
+            <!-- <a href="/mesada_pensional" class="as__button ban_anim1">
+              <span>Ingresa aquí y entérate </span>
+              <i role="presentation" class="fa-light fa-arrow-right"></i>
+            </a> -->
+          </div>
+        </div>
+        <div class="as__banner_images">
+          <img src="/assets/images/banner_2_bg.webp" alt="Asulado" />
+          <img src="/assets/images/banner_2_foto.webp" alt="Asulado" />
+        </div>
+        <div class="as__banner_piso"></div>
+      </div>
+      <div class="banner banner_1">
+        <div class="as__banner_content">
+          <h1>
             <span class="ban_anim1">Incremento mesada</span>
             <b class="ban_anim1">pensional 2024 </b>
           </h1>
@@ -344,6 +371,7 @@
           </div>
         </div>
       </div>
+      
     </div>
     <div class="as__banner_elements">
       <svg
