--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -4,17 +4,18 @@
       <div class="banner banner_1 active">
         <div class="as__banner_content">
           <h1>
-            <span class="ban_anim1">Nuevo banner </span>
-            <b class="ban_anim1">pensional 2024 </b>
+            <span class="ban_anim1">Colilla de pago y<br><span style="color:#2752b0">certificado de pensión</span> </span>
+            
           </h1>
           <div>
             <p class="ban_anim1">
-              Si tu mesada pensional para el 2023 era de $1.160.000 pesos, para
-              el 2024 será de $XXX pesos
+              ¿Necesitas solicitar tu colilla de pago o certificado de pensión?
+
             </p>
             <p class="dest ban_anim1">
-              ¡Permanece actualizado de estas novedades en nuestros canales
-              digitales!
+              Lusa, nuestra asistente virtual está lista para ayudarte
+              Escríbele a través del chat que encuentras en nuestro sitio web y autogestiona esta y otras solicitudes de tu interés
+              ¡Es muy fácil y rápido!
             </p>
             <!-- <a href="/mesada_pensional" class="as__button ban_anim1">
               <span>Ingresa aquí y entérate </span>
@@ -24,7 +25,7 @@
         </div>
         <div class="as__banner_images">
           <img src="/assets/images/banner_2_bg.webp" alt="Asulado" />
-          <img src="/assets/images/banner_2_foto.webp" alt="Asulado" />
+          <img src="/assets/images/banner_3_foto.webp" alt="Asulado" />
         </div>
         <div class="as__banner_piso"></div>
       </div>
