--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -13,9 +13,10 @@
 
             </p>
             <p class="dest ban_anim1">
-              <b>Lusa, nuestra asistente virtual, está lista para ayudarte.</b> Escríbele a través del chat que encuentras en nuestro sitio web y autogestiona esta y otras solicitudes de tu interés.<br>
-              <br><b>¡Es muy fácil y rápido!</b>
+              <b>Lusa, nuestra asistente virtual, está lista para ayudarte.</b> Escríbele a través del chat que encuentras en nuestro sitio web y autogestiona esta y otras solicitudes de tu interés.
+            
             </p>
+            <p><b>¡Es muy fácil y rápido!</b></p>
             <!-- <a href="/mesada_pensional" class="as__button ban_anim1">
               <span>Ingresa aquí y entérate </span>
               <i role="presentation" class="fa-light fa-arrow-right"></i>
