ajustes de archivos de gob corporativo

--- a/src/partials/gobierno/2_pol_corp.html
+++ b/src/partials/gobierno/2_pol_corp.html
@@ -46,7 +46,7 @@
       </li>
       <li class="as__desc_item">
         <a
-          href="/assets/documentos/SGC-PO10 Estatutos Asulado v2"
+          href="/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf"
           target="_blank"
           class="dest"
           aria-current="page"
@@ -91,7 +91,7 @@
       </li>
       <li class="as__desc_item">
         <a
-          href="/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf"
+          href="/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf"
           target="_blank"
           class="dest"
           aria-current="page"
