--- a/src/partials/gobierno/3_organos.html
+++ b/src/partials/gobierno/3_organos.html
@@ -9,7 +9,7 @@
   >
     <img
       class="max-w-[227px]"
-      src="/assets/images/accionistas1.png"
+      src="/assets/images/chart_accionistas.png"
       alt="Accionistas"
     />
     <img
@@ -403,6 +403,7 @@
       <ul>
         <li>Sebastián Alberto Rey</li>
         <li>Nicolás Grassi</li>
+        <li>Stella Villegas de Osorio*</li>
         <li>Andrés Nova Escobar</li>
       </ul>
     </li>
