Update calendar and header HTML files, add menu functionality and animations

--- a/src/partials/PORTAL/p_calendario.html
+++ b/src/partials/PORTAL/p_calendario.html
@@ -3,7 +3,7 @@
     <h4><i class="fa-light fa-calendar-heart"></i> Calendario de pagos</h4>
     <div class="cal_prox">El próximo pago será el <b> 29/12/2023 </b></div>
     <div class="cal_max">
-      Fecha máxima para reportar tus novedades <b>19/01/2024</b
+      Fecha máxima para reportar tus novedades es <b>19/01/2024</b
       ><a href="#">Reportar novedades</a>
     </div>
   </nav>
