--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -1,6 +1,6 @@
 <header id="as__header" class="as__header {{top}}">
   <nav>
-    <div class="as__nav_wrap">
+    <div class="as__nav_wrap h_menu">
       <a class="as__logo" title="ASULADO" href="/"
         ><img
           alt="asulado"
@@ -73,7 +73,7 @@
         </li>
       </ul>
     </div>
-    <div class="as__nav_wrap">
+    <div class="as__nav_wrap h_tools">
       <div class="as__nav_search">
         <i class="as__nav_search_ico fa-solid fa-magnifying-glass"></i>
         <form action="">
