Update CSS and file paths

--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -818,9 +818,9 @@ body {
         @apply w-full text-4xl font-je text-azul-bright2 text-center;
       }
       .pa__ayuda_items {
-        @apply flex flex-col md:flex-row gap-x-4 gap-y-8 xl:w-10/12 mx-auto items-start justify-between;
+        @apply flex flex-col lg:flex-row gap-x-4 gap-y-8 xl:w-10/12 mx-auto items-start justify-between;
         li {
-          @apply md:w-auto w-full flex flex-col items-center justify-center gap-3 flex-1;
+          @apply lg:w-auto w-full flex flex-col items-center justify-center gap-3 flex-1;
           i.ayu-ico {
             @apply flex h-28 w-28 items-center justify-center rounded-full border-azul-bright2 border-2 bg-alpha-20 text-5xl text-azul-bright2;
           }
